--- a/.htaccess
+++ b/.htaccess
@@ -20,5 +20,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # Rewrite all other URLs to index.php/URL
 RewriteRule .* index.php [L]
 
-php_value safe_mode "0"
+php_value open_basedir "0"
 
